# renews

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  config.toml  demo_feature.sh  install.sh  test_cli_option.sh  uninstall.sh
.devcontainer/: devcontainer.json
.github/prompts/: cleanup-refactoring.prompt.md
.github/workflows/: release.yml  rust.yml
debian/: changelog  postinst
docs/: architecture.md  configuration.md  deployment.md  migrations.md  milter.md  packaging.md  task-interactions.md
examples/: config.toml  custom_filters.rs  integration_test.rs  migration_demo.rs  milter-config.toml  renews-nntp.socket  renews-nntps.socket  renews.service
examples/filters/: custom_filters.rs
examples/systemd/: renews.service
man/: renews.1
scripts/: compare_coverage.sh  coverage.sh  dev-config.toml  dev.sh
src/: auth.rs  config.rs  control.rs  error.rs  lib.rs  main.rs  migrations.rs  overview.rs  parse.rs  peers.rs  pgp_discovery.rs  prelude.rs  queue.rs  responses.rs  retention.rs  server.rs  session.rs  storage.rs  wildmat.rs  ws.rs
src/auth/: common.rs  mod.rs  pgp_discovery.rs  postgres.rs  sqlite.rs
src/auth/migrations/: mod.rs  postgres.rs  sqlite.rs
src/auth/migrations/postgres/: 0001_initial.sql
src/auth/migrations/sqlite/: 0001_initial.sql
src/filters/: factory.rs  groups.rs  header.rs  milter.rs  mod.rs  moderation.rs  size.rs
src/handlers/: article.rs  auth.rs  group.rs  info.rs  mod.rs  post.rs  streaming.rs  utils.rs
src/limits/: mod.rs  tracker.rs
src/migrations/: auth.rs  mod.rs  storage.rs
src/storage/: common.rs  mod.rs  postgres.rs  sqlite.rs
src/storage/migrations/: mod.rs  postgres.rs  sqlite.rs
src/storage/migrations/postgres/: 0001_initial.sql
src/storage/migrations/sqlite/: 0001_initial.sql
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: admin_commands.rs  auth.rs  cancel_lock.rs  commands.rs  compliance.rs  config.rs  control.rs  filter_config.rs  header_validation.rs  insecure_posting.rs  integration.rs  max_size.rs  milter_integration.rs  moderated.rs  peers.rs  pgp_discovery.rs  queue.rs  queue_integration.rs  retention.rs  rfc_e2e.rs  rfc_example.rs  storage.rs  tls.rs  unit.rs  utils.rs  xover_tests.rs
tests/common/: mod.rs
tests/compliance/: commands.rs  rfc_e2e.rs
tests/integration/: auth.rs  cancel_lock.rs  control.rs  handler_failures.rs  idle_timeout.rs  max_size.rs  moderated.rs  peers.rs  resource_exhaustion.rs  retention.rs  storage.rs  tls.rs  ws.rs
tests/unit/: config.rs  config_failures.rs  filters.rs  parse_failures.rs  storage_common.rs  wildmat.rs
