[package]
name = "renews"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "clock",
] }
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
rustls-pemfile = "1"
clap = { version = "4", features = ["derive", "env"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
sha1 = "0.10"
pgp-lib = { version = "1.0", features = ["key-discovery", "tokio", "rustls"] }
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
regex = "1"
flume = "0.11"
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = "0.3"
tokio-cron-scheduler = "0.13"
uuid = { version = "1.17", features = ["v4"] }
async-stream = "0.3"
futures-core = "0.3"
smallvec = { version = "1.13", features = ["serde"] }

[features]
websocket = ["tokio-tungstenite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tempfile = "3"
rcgen = "0.14"
tokio-test = "0.4"
serial_test = "2"
