[package]
name = "renews"
version = "0.1.0"
edition = "2024"
description = "Modern NNTP (Network News Transfer Protocol) server implemented in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Chemiseblanc/renews"
repository = "https://github.com/Chemiseblanc/renews"
authors = ["Renews development team"]
keywords = ["nntp", "news", "server", "network", "protocol"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
nom = "7"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "clock",
] }
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
rustls-pemfile = "1"
clap = { version = "4", features = ["derive", "env"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
sha1 = "0.10"
pgp-lib = { version = "1.0", features = ["key-discovery", "tokio", "rustls"] }
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
regex = "1"
flume = "0.11"
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = "0.3"
tokio-cron-scheduler = "0.13"
uuid = { version = "1.17", features = ["v4"] }
async-stream = "0.3"
futures-core = "0.3"
smallvec = { version = "1.13", features = ["serde"] }
systemd_socket = "0.1"

[features]
websocket = ["tokio-tungstenite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tempfile = "3"
rcgen = "0.14"
tokio-test = "0.4"
serial_test = "2"

[package.metadata.deb]
maintainer = "Renews development team <https://github.com/Chemiseblanc/renews>"
copyright = "2024, Renews development team"
license-file = ["LICENSE-MIT", "5"]
changelog = "debian/changelog"
extended-description = """\
Renews is a modern, lightweight NNTP (Network News Transfer Protocol) server 
implemented in Rust. It provides a complete newsgroup server solution with a focus 
on performance, reliability, and ease of administration.

Renews implements the NNTP protocol as defined in RFC 3977, storing articles in a 
database and supporting configurable newsgroups with flexible retention policies. 
The server is designed for both standalone operation and distributed newsgroup 
synchronization with peer servers."""
depends = "$auto, systemd"
section = "net"
priority = "optional"
assets = [
    [
        "target/release/renews",
        "usr/bin/",
        "755",
    ],
    [
        "dist/man/renews.1",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "examples/renews.service",
        "lib/systemd/system/",
        "644",
    ],
    [
        "examples/renews-nntp.socket",
        "lib/systemd/system/",
        "644",
    ],
    [
        "examples/renews-nntps.socket", 
        "lib/systemd/system/",
        "644",
    ],
    [
        "examples/config.toml",
        "etc/renews/config.toml",
        "644",
    ],
]
conf-files = ["/etc/renews/config.toml"]
systemd-units = { unit-name = "renews", enable = false }

[package.metadata.generate-rpm]
license = "MIT OR Apache-2.0"
summary = "Modern NNTP server implemented in Rust"
description = """\
Renews is a modern, lightweight NNTP (Network News Transfer Protocol) server 
implemented in Rust. It provides a complete newsgroup server solution with a focus 
on performance, reliability, and ease of administration.

Renews implements the NNTP protocol as defined in RFC 3977, storing articles in a 
database and supporting configurable newsgroups with flexible retention policies. 
The server is designed for both standalone operation and distributed newsgroup 
synchronization with peer servers."""
url = "https://github.com/Chemiseblanc/renews"
group = "Applications/Internet"
requires = { systemd = "*" }
assets = [
    { source = "target/release/renews", dest = "/usr/bin/renews", mode = "755" },
    { source = "dist/man/renews.1", dest = "/usr/share/man/man1/renews.1", mode = "644" },
    { source = "examples/renews.service", dest = "/usr/lib/systemd/system/renews.service", mode = "644" },
    { source = "examples/renews-nntp.socket", dest = "/usr/lib/systemd/system/renews-nntp.socket", mode = "644" },
    { source = "examples/renews-nntps.socket", dest = "/usr/lib/systemd/system/renews-nntps.socket", mode = "644" },
    { source = "examples/config.toml", dest = "/etc/renews/config.toml.example", mode = "644", config = true },
]
